# Lunatictech

./: .gitignore  README.md  global.d.ts  main.tsx  package-lock.json  package.json  schema.graphql  tsconfig.json  tslint.json
backend/: .env  .gitignore  index.js  package.json
backend/native/: .env  .gitignore  Cargo.toml  index.node
backend/native/examples/: examples1.rs
backend/native/migrations/2019-09-18-164158_smile/: down.sql  up.sql
backend/native/migrations/2019-11-08-121908_initialize/: down.sql  up.sql
backend/native/src/: db.rs  handlefile.rs  lib.rs  models.rs  schema.rs
backend/src/: index.js
backend/src/db/: index.js
backend/src/resolvers/: index.js
backend/src/schema/: index.js
docker/: docker-compose.yml  insert.sql  real.sql
front/: README.md  global.d.ts  main.tsx  package-lock.json  package.json  tsconfig.json  tslint.json
front/public/: index.html  style.scss
front/src/: AshaRouter.tsx  AvatarTop.tsx  ErrorBox.tsx  Layout.tsx  sidebar.tsx
front/src/Dashboard/: ImageSmile.tsx  Profile.tsx  Sidebar.tsx  index.tsx
front/src/Layout/: Content.tsx  Layout.tsx  Sidebar.tsx
front/src/Login/: index.tsx
front/src/Register/: index.tsx
front/src/apollo/: actionMutation.tsx  mutation.tsx  query.tsx
front/src/components/: Avatar.tsx  FormSmileAvatar.tsx  FormSmileField.tsx  Loading.tsx  Quotes.tsx
front/src/dashboard/: DashboardResult.tsx  DriveResult.tsx  LoginResult.tsx  PostResult.tsx  index.tsx
front/src/redux/: constan.tsx  sagas.tsx
front/src/rust-handle/: Cargo.toml
front/src/setup/: Avatar.tsx  InputLarge.tsx  Page.tsx  index.tsx
front/src/validation/: index.tsx
lunatictech/: package.json  postcss.config.js  tailwind.config.js
lunatictech/src/: client.js
lunatictech/src/components/: Author.svelte  Card.svelte  Headline.svelte  Icon.svelte  Nav.svelte  Notification.svelte  NotificationItem.svelte  NotificationList.svelte  Panel.svelte  PostItem.svelte  Rating.svelte  Search.svelte  Sidebar.svelte  Star.svelte  StickyHead.svelte  Topic.svelte  Trending.svelte  UserIcon.svelte
lunatictech/src/routes/: _layout.svelte  discover.svelte  game.svelte  index.svelte  movie.svelte
lunatictech/src/store/: index.js
lunatictech/static/: global.css
public/: index.html  style.scss
server/: Cargo.toml
server/migrations/2019-11-11-034048_user/: down.sql  up.sql
server/migrations/2019-11-15-155531_post/: down.sql  up.sql
server/migrations/2019-11-17-161352_category/: down.sql  up.sql
server/migrations/2019-12-30-203639_comment/: down.sql
server/migrations/2020-01-08-000651_game/: down.sql
server/src/: db.rs  errors.rs  main.rs  schema.patch.copy  schema.rs
smile/: generated.go  glide.yaml  go.mod  go.sum  gqlgen.yml
smile-api/: .gitignore  Cargo.toml  diesel.toml  generated.go  glide.yaml  go.mod  gqlgen.yml  models_gen.go  resolver.go  rustfmt.toml  schema.graphql
smile-api/migrations/2019-11-11-034048_user/: down.sql
smile-api/migrations/2019-11-15-155531_post/: down.sql  up.sql
smile-api/migrations/2019-11-17-161352_category/: down.sql  up.sql
smile-api/migrations/2019-11-21-154749_cotributor/: down.sql  up.sql
smile-api/migrations/2019-12-30-203639_comment/: up.sql
smile-api/migrations/2020-01-08-000651_game/: up.sql
smile-api/migrations/2020-01-08-000659_movie/: down.sql
smile-api/migrations/2020-01-08-014818_contrait_game_and_movie/: down.sql  up.sql
smile-api/migrations/2020-01-17-144032_blog_info/: up.sql
smile-api/migrations/2020-01-17-144813_topic/: down.sql  up.sql
smile-api/models/: db.go  models.go
smile-api/schema/: schema.graphql
smile-api/src/: db.rs  errors.rs  lib.rs  schema.patch.copy  schema.rs
smile-api/src/graphql/: category.rs  drive.rs  handler.rs  mod.rs  node.rs  post.rs  schema.rs  user.rs
smile-api/src/handlers/: graphql.rs  user.rs
smile-api/src/models/: category.rs  drive.rs  embed.rs  handler.rs  info.rs  mod.rs  node.rs  post.rs  schema.rs  user.rs
smile-api/src/utils/: mod.rs
smile-api/src/utils/key/: public.key
smile/db/: db.go  models.go  models_db.go
smile/models/: models.go
smile/resolver/: resolver.go
smile/schema/: schema.graphql
smile/server/: server.go
src/: AshaRouter.tsx  ErrorBox.tsx  Layout.tsx  sidebar.tsx
src/setup/: Avatar.tsx  InputLarge.tsx  index.tsx
ui/: package.json  rollup.config.js
ui/src/: template.html
(+88 files in other folders)
