[package]
name = "smile_api"
version = "0.1.0"
authors = ["harapan <harapanpardamean@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "native_module"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"
chrono = { version = "0.4.6", features = ["serde"] }
neon-serde = "0.2.0"
serde_derive = "1.0.101"
serde_json = "1.0.40"
serde = "1.0.101"
diesel = { version = "1.0.0", features = ["mysql","chrono"] }
lazy_static = "1.4.0"
dotenv = "0.9.0"
