[package]
name = "smile_api"
version = "0.1.0"
authors = ["harapan <harapanpardamean@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "native_module"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"
neon-serde = "0.2.0"
serde_derive ="*"
dotenv = "0.15.0"
chrono = { version = "0.4.9", features = ["serde"] }
lazy_static = "1.4.0"
diesel = { version= "1.4.3", features = ["chrono", "mysql"] }
