[package]
name = "smile_api"
version = "0.1.0"
authors = ["harapan <harapanpardamean@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "native_module"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"
neon-serde = "0.3.0"
serde_json = "1.0.41"
serde_derive = "1.0.102"
serde = "1.0.102"
jsonwebtoken = "6.0.1"
dotenv = "0.15.0"
chrono = { version = "0.4.9", features = ["serde"] }
lazy_static = "1.4.0"
bcrypt = "0.6.1"
diesel = { version= "1.4.3", features = ["chrono", "mysql", "r2d2"] }
